[gd_scene load_steps=36 format=3 uid="uid://cgsprlpqk7ocw"]

[ext_resource type="Script" uid="uid://dcey7m0jm7meh" path="res://main.gd" id="1_w44g7"]
[ext_resource type="ArrayMesh" uid="uid://bsdx74exeukmj" path="res://assets/3d models/blackjack_table.obj" id="2_cm266"]
[ext_resource type="Script" uid="uid://lf0hb0jghgoi" path="res://player.gd" id="3_g8g3n"]
[ext_resource type="Texture2D" uid="uid://dyybhr2xuiqu3" path="res://assets/textures/player.jpg" id="4_8u0te"]
[ext_resource type="AudioStream" uid="uid://cmjg7irgwafgi" path="res://assets/sound/sfx/frog-1.mp3" id="5_oiatc"]
[ext_resource type="AudioStream" uid="uid://clqfsyj6cwkda" path="res://assets/sound/sfx/frog-2.mp3" id="6_mg3m2"]
[ext_resource type="Script" uid="uid://bwk516so12tvb" path="res://npc.gd" id="7_ojb7r"]
[ext_resource type="Texture2D" uid="uid://bvkbme7p304wc" path="res://assets/textures/npc.png" id="8_e5qqf"]
[ext_resource type="Texture2D" uid="uid://b1p42qi7btf3y" path="res://assets/textures/floor.jpg" id="9_7bbuq"]
[ext_resource type="Script" uid="uid://cdn31vsunl51v" path="res://card_detail_panel.gd" id="10_saq78"]
[ext_resource type="Theme" uid="uid://5vu7cke1qphj" path="res://globals/new_theme.tres" id="11_8uw0o"]
[ext_resource type="AudioStream" uid="uid://cnwhmf5uhfgkq" path="res://assets/sound/sfx/button-finish.mp3" id="12_ql5ya"]
[ext_resource type="AudioStream" uid="uid://3hd3no63h5sk" path="res://assets/sound/sfx/button-merge.mp3" id="13_ka3nr"]
[ext_resource type="AudioStream" uid="uid://dred3t212vo6e" path="res://assets/sound/sfx/button-reload.mp3" id="14_48knj"]
[ext_resource type="Script" uid="uid://bwp62opsqnmhb" path="res://main_menu.gd" id="15_cm266"]

[sub_resource type="MeshTexture" id="MeshTexture_w48qg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vw27"]
resource_local_to_scene = true
albedo_color = Color(0.0470588, 0.439216, 0, 1)
albedo_texture = SubResource("MeshTexture_w48qg")
normal_scale = 12.58
clearcoat = 0.3
clearcoat_roughness = 0.11
ao_light_affect = 0.64
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
heightmap_flip_tangent = true
heightmap_flip_binormal = true
heightmap_flip_texture = true
subsurf_scatter_skin_mode = true
texture_filter = 1
texture_repeat = false
grow_amount = 1.0
point_size = 2.6
distance_fade_min_distance = 3.7
distance_fade_max_distance = 16.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4c57u"]
albedo_color = Color(1, 0.0784314, 0.0705882, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_efxa6"]
albedo_color = Color(0.807843, 0.0941176, 0.0431373, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dg77c"]
albedo_color = Color(0.619608, 0, 0.145098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ycdy4"]
albedo_color = Color(0.619608, 0, 0.145098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
albedo_color = Color(0.619608, 0, 0.145098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vivmo"]
albedo_color = Color(0.619608, 0, 0.145098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yaehf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_074og"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
albedo_color = Color(0.823212, 0.823212, 0.823212, 1)
albedo_texture = ExtResource("4_8u0te")
uv1_scale = Vector3(1.95, 1.95, 1.95)
uv1_offset = Vector3(0, 0.02, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_kek77"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.01
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_efxa6"]
height = 0.1
radius = 0.211914

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cegan"]
albedo_color = Color(0.926806, 0.926806, 0.926806, 1)
albedo_texture = ExtResource("8_e5qqf")
rim = 0.0
uv1_scale = Vector3(2, 2, 2)
uv2_scale = Vector3(0, 0, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_4c57u"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.01
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ycdy4"]
height = 0.394531
radius = 1.12646

[sub_resource type="PlaneMesh" id="PlaneMesh_5vw27"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kek77"]
albedo_texture = ExtResource("9_7bbuq")

[sub_resource type="LabelSettings" id="LabelSettings_w48qg"]
font_color = Color(0, 0, 0, 1)

[node name="main" type="Node3D"]
script = ExtResource("1_w44g7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.999979, 0.00526386, -0.00374083, -0.000156536, 0.559353, 0.82893, 0.00645582, 0.828913, -0.55934, 0, 1.51619, -0.438095)
current = true

[node name="BlackjackTable" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.389, 0)
cast_shadow = 0
mesh = ExtResource("2_cm266")
surface_material_override/0 = SubResource("StandardMaterial3D_5vw27")
surface_material_override/1 = SubResource("StandardMaterial3D_4c57u")
surface_material_override/2 = SubResource("StandardMaterial3D_efxa6")
surface_material_override/3 = SubResource("StandardMaterial3D_dg77c")
surface_material_override/4 = SubResource("StandardMaterial3D_ycdy4")
surface_material_override/5 = SubResource("StandardMaterial3D_w48qg")
surface_material_override/6 = SubResource("StandardMaterial3D_vivmo")
surface_material_override/7 = SubResource("StandardMaterial3D_2cqfq")
surface_material_override/8 = SubResource("StandardMaterial3D_yaehf")
surface_material_override/9 = SubResource("StandardMaterial3D_074og")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0261944, 0.999657, 0, -0.999657, 0.0261944, 0, 3.41891, 0.140463)

[node name="playerArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0226357)
script = ExtResource("3_g8g3n")

[node name="player" type="MeshInstance3D" parent="playerArea"]
transform = Transform3D(-0.199999, 0, 0.000600415, 0, 0.2, 0, -0.000600415, 0, -0.199999, 0.708, 0.699, -0.25)
material_override = SubResource("StandardMaterial3D_lquwl")
mesh = SubResource("CylinderMesh_kek77")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="playerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.699328, 0.707755, -0.253027)
shape = SubResource("CylinderShape3D_efxa6")

[node name="frog_sfx_1" type="AudioStreamPlayer" parent="playerArea"]
stream = ExtResource("5_oiatc")
volume_db = 6.667

[node name="frog_sfx_2" type="AudioStreamPlayer" parent="playerArea"]
stream = ExtResource("6_mg3m2")

[node name="npcArea" type="Area3D" parent="."]
transform = Transform3D(-0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, -0.629, 0.696, -0.272636)
script = ExtResource("7_ojb7r")

[node name="npc" type="MeshInstance3D" parent="npcArea"]
transform = Transform3D(1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cegan")
mesh = SubResource("CylinderMesh_4c57u")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="npcArea"]
transform = Transform3D(1, 0, 2.13163e-14, 0, 1, 0, -2.13163e-14, 0, 1, 0, -0.0742192, 0)
shape = SubResource("CylinderShape3D_ycdy4")

[node name="floor" type="MeshInstance3D" parent="."]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, -0.378928, 1.37231)
mesh = SubResource("PlaneMesh_5vw27")
surface_material_override/0 = SubResource("StandardMaterial3D_kek77")

[node name="player_hand" type="Node3D" parent="."]

[node name="npc_hand" type="Node3D" parent="."]

[node name="CanvasNpc" type="CanvasLayer" parent="."]

[node name="BalloonLabel" type="Control" parent="CanvasNpc"]
visible = false
layout_mode = 3
anchor_left = 0.717938
anchor_top = 0.475
anchor_right = 0.997
anchor_bottom = 0.759
offset_left = -0.0640259
offset_top = 0.199982
offset_right = -0.544067
offset_bottom = 0.167969
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasNpc/BalloonLabel"]
light_mask = 7
visibility_layer = 7
z_index = 4
layout_mode = 1
anchors_preset = -1
anchor_right = 0.994
anchor_bottom = 0.989
offset_right = -0.0740051
offset_bottom = 0.0240021
label_settings = SubResource("LabelSettings_w48qg")

[node name="ColorRect" type="ColorRect" parent="CanvasNpc/BalloonLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 1, 1, 0.572549)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndTurnButton" type="Button" parent="CanvasLayer"]
visible = false
modulate = Color(0, 0.898039, 0, 1)
offset_left = 507.0
offset_top = 517.0
offset_right = 656.0
offset_bottom = 548.0
text = "FINALIZAR TURNO"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="MergeButton" type="Button" parent="CanvasLayer2"]
visible = false
modulate = Color(1, 0, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -15.5
offset_right = 34.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "FUNDIR"

[node name="CanvasCard" type="CanvasLayer" parent="."]

[node name="CardDetailPanel" type="Control" parent="CanvasCard"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_saq78")

[node name="ColorRect" type="ColorRect" parent="CanvasCard/CardDetailPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.335646
anchor_top = 0.0123827
anchor_right = 0.992764
anchor_bottom = 0.986148
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasCard/CardDetailPanel/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasCard/CardDetailPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.334
anchor_bottom = 0.994
offset_top = 78.0
offset_right = 0.231964
offset_bottom = -4.112

[node name="TextureRect" type="TextureRect" parent="CanvasCard/CardDetailPanel/VBoxContainer"]
layout_mode = 2
expand_mode = 5

[node name="Button" type="Button" parent="CanvasCard/CardDetailPanel"]
layout_mode = 0
anchor_right = 0.330729
anchor_bottom = 0.0756173
theme = ExtResource("11_8uw0o")
text = "FECHAR PAINEL"
metadata/_edit_use_anchors_ = true

[node name="CanvasReset" type="CanvasLayer" parent="."]

[node name="ResetButton" type="Button" parent="CanvasReset"]
visible = false
modulate = Color(1, 1, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.5
offset_top = -59.0
offset_right = 105.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "REINICIAR PARTIDA"

[node name="button_finish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ql5ya")

[node name="button_merge" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ka3nr")

[node name="button_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_48knj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -65.0
offset_right = 159.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_cm266")

[node name="JOGAR" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "JOGAR"

[node name="SAIR" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SAIR"

[connection signal="pressed" from="CanvasReset/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JOGAR" to="VBoxContainer" method="_on_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/SAIR" to="VBoxContainer" method="_on_jogar_2_pressed"]
[connection signal="pressed" from="VBoxContainer/SAIR" to="VBoxContainer" method="_on_sair_pressed"]
